fix wrap for my projects(mobile version)

--- a/src/projects/MyProjects.module.css
+++ b/src/projects/MyProjects.module.css
@@ -13,5 +13,6 @@
     display: flex;
     width: 100%;
     justify-content: space-around;
+    flex-wrap: wrap;
 
 }
